--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jonathonb1/feddit#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "blogy": "^2.0.6",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
