html layout start

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jonathonb1/feddit#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bcrypt": "^5.0.1",
     "blogy": "^2.0.6",
     "connect-session-sequelize": "^7.1.5",
