fix dependency conflicts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feddit",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Table of Contents",
   "main": "server.js",
   "scripts": {
     "test": "jest",
